# paprika-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  cliff.toml  config.py  main.py  paprika_client.py  project_development_plan.md  pyproject.toml  server.py
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml
assets/demos/stage_01/: paprika_demo_stage01_script.docx
docs/: DEV_PLAN.md  DOC_PROCESS.md  HANDOFF.md  LEARNING_PLAN.md  SUMMARY.md
docs/session/: README.md
docs/spec/: README.md
docs/stages/: STAGE_02.md
scripts/: check_readme_staleness.sh
tests/: test_config.py  test_server.py
